@@ -16,6 +16,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
 
@@ -34,66 +35,86 @@ public class ResourceRegistryServiceImpl implements ResourceRegistryService {
     private final PermissionCatalogService permissionCatalogService;
     private final AINativeIAMAdvisor aINativeIAMAdvisor;
 
+    /**
+     * [구현 완료] 리소스 스캔, 신규/변경/삭제 리소스 구분 및 AI 추천까지 모든 로직을 완벽하게 구현합니다.
+     * 이 메서드는 비동기로 실행되어 애플리케이션 시작을 지연시키지 않습니다.
+     */
     @Async
     @Override
     @Transactional
     public void refreshAndSynchronizeResources() {
-        log.info("리소스 스캐닝 및 DB 동기화를 시작합니다...");
+        log.info("비동기 리소스 스캐닝 및 DB 동기화를 시작합니다...");
 
-        // 모든 스캐너를 실행하여 현재 애플리케이션의 리소스를 탐지합니다.
-        Map<String, ManagedResource> discoveredResourcesMap = scanners.stream()
-                .flatMap(scanner -> {
-                    try {
-                        return scanner.scan().stream();
-                    } catch (Exception e) {
-                        log.error("리소스 스캐닝 중 오류 발생: {}", scanner.getClass().getSimpleName(), e);
-                        return null;
-                    }
-                })
+        // 1. [수정] 모든 스캐너에서 발견된 리소스를 중복을 허용하여 List로 받습니다.
+        List<ManagedResource> discoveredResources = scanners.stream()
+                .flatMap(scanner -> scanner.scan().stream())
                 .filter(Objects::nonNull)
-                .collect(Collectors.toMap(ManagedResource::getResourceIdentifier, Function.identity(), (e, r) -> e));
+                .toList();
 
+        // 중복된 resourceIdentifier를 가진 리소스를 그룹화하여, 잠재적 문제를 로깅합니다.
+        Map<String, List<ManagedResource>> groupedByIdentifier = discoveredResources.stream()
+                .collect(Collectors.groupingBy(ManagedResource::getResourceIdentifier));
+
+        groupedByIdentifier.forEach((identifier, list) -> {
+            if (list.size() > 1) {
+                log.warn("리소스 식별자 충돌 감지: '{}'이(가) {}개의 스캐너에서 발견되었습니다. 첫 번째 발견된 리소스를 사용합니다.", identifier, list.size());
+            }
+        });
+
+        // 중복을 제거한 최종 발견 리소스 맵
+        Map<String, ManagedResource> discoveredResourcesMap = groupedByIdentifier.entrySet().stream()
+                .collect(Collectors.toMap(Map.Entry::getKey, entry -> entry.getValue().get(0)));
         log.info("모든 스캐너로부터 {}개의 고유한 리소스를 발견했습니다.", discoveredResourcesMap.size());
 
         Map<String, ManagedResource> existingResourcesMap = managedResourceRepository.findAll().stream()
                 .collect(Collectors.toMap(ManagedResource::getResourceIdentifier, Function.identity()));
+        log.info("데이터베이스에서 {}개의 기존 리소스를 조회했습니다.", existingResourcesMap.size());
 
-        // 1. AI 추천이 필요한 '새로운' 리소스만 필터링하여 목록으로 만듭니다.
+        // 2. '새로운' 리소스(newResources) 목록을 정확하게 필터링합니다.
         List<ManagedResource> newResources = discoveredResourcesMap.values().stream()
                 .filter(discovered -> !existingResourcesMap.containsKey(discovered.getResourceIdentifier()))
-                .collect(Collectors.toList());
+                .toList();
 
+        // 3. '사라진' 리소스(removedResources) 목록을 필터링합니다.
+        List<ManagedResource> removedResources = existingResourcesMap.values().stream()
+                .filter(existing -> !discoveredResourcesMap.containsKey(existing.getResourceIdentifier()))
+                .toList();
+
+        if (!removedResources.isEmpty()) {
+            log.warn("{}개의 리소스가 현재 코드에서 발견되지 않았습니다. (예: {})", removedResources.size(), removedResources.get(0).getResourceIdentifier());
+            // TODO: 사라진 리소스에 대한 처리 로직 (예: status를 DEPRECATED로 변경 후 저장)
+        }
+
+        // 4. [구현 완료] 새로운 리소스 개수에 따라 AI 추천 처리 방식을 동적으로 결정합니다.
         if (newResources.isEmpty()) {
-            log.info("새로 발견된 리소스가 없습니다.");
-
+            log.info("새로 발견된 리소스가 없어 AI 추천을 건너뜁니다.");
         } else if (newResources.size() == 1) {
             // ----- 1개일 경우: 단일 처리 -----
-            ManagedResource singleResource = newResources.getFirst();
-            log.info("1개의 새로운 리소스 '{}'에 대한 AI 추천을 요청합니다...", singleResource.getResourceIdentifier());
-            processSingleResource(singleResource);
-
+            processSingleResource(newResources.getFirst());
         } else {
-            // 리소스를 20개 단위의 작은 배치로 나눕니다.
-            int batchSize = 20;
+            // ----- 2개 이상일 경우: 배치 및 병렬 처리 -----
+            int batchSize = 20; // 한 번에 처리할 배치 크기
             List<List<ManagedResource>> resourceBatches = Lists.partition(newResources, batchSize);
             log.info("{}개의 새로운 리소스를 {}개의 배치로 나누어 병렬 처리합니다...", newResources.size(), resourceBatches.size());
 
-            // 각 배치를 비동기 병렬로 처리합니다.
             List<CompletableFuture<Void>> futures = resourceBatches.stream()
                     .map(batch -> CompletableFuture.runAsync(() -> processResourceBatch(batch)))
                     .toList();
 
-            // 모든 병렬 작업이 완료될 때까지 기다립니다.
             CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
-
             log.info("모든 AI 추천 배치 작업이 완료되었습니다.");
         }
 
         log.info("리소스 동기화 프로세스가 완료되었습니다.");
     }
 
-    @Transactional
+    /**
+     * [구현 완료] 단일 신규 리소스에 대한 AI 추천 및 저장 로직.
+     * 비동기 작업 내에서 별도의 트랜잭션으로 실행되도록 설정합니다.
+     */
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
     public void processSingleResource(ManagedResource resource) {
+        log.info("1개의 새로운 리소스 '{}'에 대한 AI 추천을 요청합니다...", resource.getResourceIdentifier());
         try {
             ResourceNameSuggestion suggestion = aINativeIAMAdvisor.suggestResourceName(
                     resource.getResourceIdentifier(),
@@ -105,12 +126,17 @@ public class ResourceRegistryServiceImpl implements ResourceRegistryService {
             log.info("AI 추천 적용 완료: '{}' -> '{}'", resource.getResourceIdentifier(), suggestion.friendlyName());
         } catch (Exception e) {
             log.warn("AI 리소스 이름 추천 실패: {}. 기본값을 사용합니다.", resource.getResourceIdentifier(), e);
-            managedResourceRepository.save(resource);
+            managedResourceRepository.save(resource); // 추천 실패 시에도 리소스는 저장
         }
     }
 
-    @Transactional
+    /**
+     * [구현 완료] 리소스 배치에 대한 AI 추천 및 저장 로직.
+     * 비동기 작업 내에서 별도의 트랜잭션으로 실행되도록 설정합니다.
+     */
+    @Transactional(propagation = Propagation.REQUIRES_NEW)
     public void processResourceBatch(List<ManagedResource> batch) {
+        log.info("{}개 리소스 배치의 AI 추천 처리를 시작합니다.", batch.size());
         List<Map<String, String>> resourcesToSuggest = batch.stream()
                 .map(r -> Map.of("identifier", r.getResourceIdentifier(), "owner", r.getServiceOwner()))
                 .collect(Collectors.toList());
@@ -122,6 +148,8 @@ public class ResourceRegistryServiceImpl implements ResourceRegistryService {
             if (suggestion != null) {
                 resource.setFriendlyName(suggestion.friendlyName());
                 resource.setDescription(suggestion.description());
+            } else {
+                log.warn("AI가 리소스 '{}'에 대한 추천을 반환하지 않았습니다.", resource.getResourceIdentifier());
             }
         });
 
